# array_tools

./: CMakeLists.txt
include/: endian_convertion.hpp  thread_manager.hpp  vector_u8_reinterpret_cast.hpp
include/array_tools/: endian_convertion.hpp  fstream_vector.hpp  vector_u8_reinterpret_cast.hpp
src/: CMakeLists.txt  endian_convertion.cpp  fstream_vector.cpp  vector_u8_reinterpret_cast.cpp
src/array_tools/: endian_convertion.cpp  fstream_vector.cpp  vector_u8_reinterpret_cast.cpp
